name:                SUBLang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SUBLang#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Hathhorn
maintainer:          example@example.com
copyright:           2017 Chris Hathhorn
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SUBLang, UBExp, UBStmt
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
                     , QuickCheck
                     , derive
                     , either
  default-language:    Haskell2010

executable SUBLang-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SUBLang
  default-language:    Haskell2010

test-suite SUBLang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SUBLang
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/SUBLang
